<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_1"
                style="@style/QuestionCardView"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_number" />

                    <TextView
                        style="@style/QuestionAndAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/question_1_edittext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Input your answer here"
                            android:inputType="textCapWords" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_2"
                style="@style/QuestionCardView"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_number" />

                    <TextView
                        style="@style/QuestionAndAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/Question2CheckBox1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Question2_Answer1" />

                        <CheckBox
                            android:id="@+id/Question2CheckBox2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Question2_Answer2" />

                        <CheckBox
                            android:id="@+id/Question2CheckBox3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Question2_Answer3" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_3"
                style="@style/QuestionCardView"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3_number" />

                    <TextView
                        style="@style/QuestionAndAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton android:id="@+id/Question3RadioButton1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Question3_Answer1" />

                            <RadioButton android:id="@+id/Question3RadioButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Question3_Answer2" />

                            <RadioButton android:id="@+id/Question3RadioButton3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Question3_Answer3" />

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_4"
                style="@style/QuestionCardView"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_number" />

                    <TextView
                        style="@style/QuestionAndAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton android:id="@+id/Question4RadioButton1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Question3_Answer1" />

                            <RadioButton android:id="@+id/Question4RadioButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Question3_Answer2" />

                            <RadioButton android:id="@+id/Question4RadioButton3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Question3_Answer3" />

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>